chore: contact-us section with modal

--- a/sections/health-text.liquid
+++ b/sections/health-text.liquid
@@ -248,6 +248,12 @@
         }
       ]
     }
+  ],
+  "presets": [
+    {
+      "name": "Health text",
+      "category": "custom"
+    }
   ]
 }
 {% endschema %}
