--- a/sections/health-reviews.liquid
+++ b/sections/health-reviews.liquid
@@ -41,7 +41,7 @@
   });
 {% endjavascript %}
 
-<div class="reviews reviews-{{ section.id }}">
+<div id="{{ section.settings.anchor_link }}" class="reviews reviews-{{ section.id }}">
   <h2 class="title">{{ section.settings.title }}</h2>
 
   <p class="description">{{ section.settings.description }}</p>
@@ -94,6 +94,11 @@
       "type": "text",
       "id": "description",
       "label": "Review description"
+    },
+    {
+      "type": "text",
+      "id": "anchor_link",
+      "label": "Anchor link"
     },
     {
       "type": "range",
