--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +33,8 @@
     <main>
       {{ content_for_layout }}
     </main>
+
+    {% section 'health-footer' %}
 
     {% # theme-check-disable %}
     {{ 'swiper-bundle.min.js' | asset_url | script_tag }}
