--- a/sections/health-footer.liquid
+++ b/sections/health-footer.liquid
@@ -1,6 +1,8 @@
 <style>
   .footer-{{ section.id }} {
     padding: 20px;
+    max-width: 1450px;
+    margin: 0 auto;
 
     & .nav-wrapper {
       display: flex;
@@ -8,6 +10,11 @@
       align-items: center;
       gap: 50px;
       margin-bottom: 30px;
+
+      @media (min-width: 1366px) {
+        flex-direction: row;
+        justify-content: space-between;
+      }
 
       & ul {
         display: flex;
@@ -27,6 +34,13 @@
       flex-direction: column;
       gap: 10px;
 
+      @media (min-width: 1366px) {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 15px;
+      }
+
       & .social-block {
         height: 172px;
         padding: 25px;
@@ -34,7 +48,15 @@
         flex-direction: column;
         justify-content: space-between;
         border-radius: 12px;
-        background-color: var(--color-card)
+        background-color: var(--color-card);
+
+        @media (min-width: 1366px) {
+          width: 405px;
+        }
+
+        @media (min-width: 1920px) {
+          width: 460px;
+        }
       }
 
       & .title {
