--- a/assets/health-collection.css
+++ b/assets/health-collection.css
@@ -53,7 +53,7 @@
     opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.5s ease-in-out;
+    transition: opacity 1s ease-in-out;
 
     &.active {
       visibility: visible;
