--- a/sections/health-faq.liquid
+++ b/sections/health-faq.liquid
@@ -34,19 +34,21 @@
 
     <div class="faq-item">
       <div class="summary-wrapper" data-summary-id="{{ block.id }}">
-        <div class="dots">
-          <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="6" cy="6.5" r="6" fill="#42ABDE"/>
-          </svg>
-        </div>
+        <div class="dots-nums-wrapper">
+          <div class="dots">
+            <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="6" cy="6.5" r="6" fill="#42ABDE"/>
+            </svg>
+          </div>
 
-        <div class="numbering">
-          {%- if forloop.index < 10 -%}
-            <span>0{{ forloop.index }}</span>
-          {%- else -%}
-            <span>{{ forloop.index }}</span>
-          {%- endif -%}
-          <span></span>
+          <div class="numbering">
+            {%- if forloop.index < 10 -%}
+              <span>0{{ forloop.index }}</span>
+            {%- else -%}
+              <span>{{ forloop.index }}</span>
+            {%- endif -%}
+            <span></span>
+          </div>
         </div>
 
         <h3 class="details">{{ block.settings.details }}</h3>
